# gh-dashboard

./: .gitignore  .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  Dockerfile  Makefile  README.md
src/: configuration.rs  error.rs  lib.rs  main.rs  models.rs  testing.rs  widgets.rs
src/service/: workflows.rs
src/testing/: factories.rs
src/widgets/: state.rs  workflow_details.rs  workflow_run.rs
