[package]
name = "gh-dashboard"
version = "0.0.2"
edition = "2024"

[lib]
proc-macro = true

[features]
mocks = ["fake", "mockall", "rand"]

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.43"
color-eyre = "0.6.5"
config = "0.15.19"
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs = "6.0.0"
exn = "0.3.0"
log = "0.4.29"
log-rs = { git = "https://github.com/mathieu-lemay/log-rs.git", version = "0.1.0" }
octocrab = "0.49.5"
open = "5.3.3"
quote = "1.0.44"
ratatui = "0.30.0"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
syn = "2.0.114"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.18"
url = "2.5.8"

# feature = mocks
mockall = { version = "0.14.0", optional = true }
fake = { version = "4.4.0", features = ["derive", "uuid", "chrono"], optional = true }
rand = { version = "0.10.0", optional = true }
